--- a/config.ini
+++ b/config.ini
@@ -317,7 +317,7 @@ pushbullet_prio_startup = 0
 pushbullet_prio_warning = 0
 [servers]
 [[news.usenetserver.com]]
-username = TapedeckNinja
+username = #SET USERNAME#
 priority = 0
 enable = 1
 displayname = news.usenetserver.com
