--- a/values.yaml
+++ b/values.yaml
@@ -39,6 +39,7 @@ volumes:
 #   password: pass
 #   displayname: usenetserver
 #   port: 563
+#   ssl: true
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
